[gd_scene load_steps=4 format=3 uid="uid://cdtv1rwt2vl2b"]

[ext_resource type="Script" path="res://scripts/stage_interface.gd" id="1_kuev2"]
[ext_resource type="PackedScene" uid="uid://cao75vyie4gm7" path="res://content/stage/act_button.tscn" id="1_xgfc7"]
[ext_resource type="Script" path="res://scripts/act_selector.gd" id="2_1c7ey"]

[node name="StageInterface" type="CanvasLayer"]
script = ExtResource("1_kuev2")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 60
theme_override_constants/margin_top = 60
theme_override_constants/margin_right = 60
theme_override_constants/margin_bottom = 60

[node name="ActSelector" type="Control" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
script = ExtResource("2_1c7ey")

[node name="Background" type="Panel" parent="MarginContainer/ActSelector"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -320.0
offset_top = -600.0
grow_horizontal = 0
grow_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/ActSelector/Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 15.0
offset_top = 15.0
offset_right = -15.0
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 145

[node name="BasicMove" parent="MarginContainer/ActSelector/Background/VBoxContainer" instance=ExtResource("1_xgfc7")]
layout_mode = 2
_button_text = "Basic Move"
_show_info = false

[node name="Skill" parent="MarginContainer/ActSelector/Background/VBoxContainer" instance=ExtResource("1_xgfc7")]
layout_mode = 2
_button_text = "Skill"
_show_info = false

[node name="UseItem" parent="MarginContainer/ActSelector/Background/VBoxContainer" instance=ExtResource("1_xgfc7")]
layout_mode = 2
_button_text = "Item"
_show_info = false

[node name="Escape" parent="MarginContainer/ActSelector/Background/VBoxContainer" instance=ExtResource("1_xgfc7")]
layout_mode = 2
_button_text = "Escape"
_show_info = false

[node name="PartyMembers" type="Control" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8

[node name="Background" type="Panel" parent="MarginContainer/PartyMembers"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -160.0
offset_right = 995.0
grow_vertical = 0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/PartyMembers/Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_right = -16.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 330

[node name="ActionOrderTimeline" type="Control" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8

[node name="Background" type="Panel" parent="MarginContainer/ActionOrderTimeline"]
layout_mode = 0
offset_left = -798.0
offset_top = -159.0
offset_right = -327.0

[node name="ColorRect" type="ColorRect" parent="MarginContainer/ActionOrderTimeline/Background"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 7.0
offset_top = -2.5
offset_right = -7.0
offset_bottom = 2.5
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="MarginContainer/ActionOrderTimeline/Background"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -47.0
offset_top = 2.5
offset_right = -7.0
offset_bottom = 25.5
grow_horizontal = 0
grow_vertical = 2
text = "ACT"
horizontal_alignment = 2

[node name="Party" type="Control" parent="MarginContainer/ActionOrderTimeline/Background"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 7.0
offset_top = 17.0
offset_right = -7.0
offset_bottom = 77.0
grow_horizontal = 2

[node name="Enemies" type="Control" parent="MarginContainer/ActionOrderTimeline/Background"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 7.0
offset_top = -77.0
offset_right = -7.0
grow_horizontal = 2
grow_vertical = 0
